[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = { version = "2", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
rpc = { path = "../rpc" }
