[package]
name = "stream"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
backoff = { version = "0.4", features = ["tokio"] }
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v9.1.0+solana.2.3.11", default-features = false }
yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc", tag = "v9.1.0+solana.2.3.11" }
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = { version = "2", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
